ramdisk: Merge A520FXXU4BRD2

--- a/rf-tools/Unified/ramdisk/init.carrier.rc
+++ b/rf-tools/Unified/ramdisk/init.carrier.rc
@@ -1,5 +1,7 @@
+
+
 on boot
-# IMS stack for IMS
+# IMS Stack
 service imsd /system/bin/imsd
     class main
     socket imsd stream 0660 system system
