--- a/rf-tools/Unified/ramdisk/init.baseband.rc
+++ b/rf-tools/Unified/ramdisk/init.baseband.rc
@@ -18,6 +18,10 @@ on fs
     chmod 0660 /sys/devices/virtual/misc/umts_dm0/dm_state
     chown radio system /sys/devices/virtual/misc/umts_dm0/dm_state
 
+    # /efs/factory.prop for Dual / Single SIM settings
+    chown radio radio /efs/factory.prop
+    chmod 0600 /efs/factory.prop
+
 on property:ril.clatd.v4-rmnet0=up
     write /sys/class/net/rmnet0/queues/rx-0/rps_cpus 4
     write /sys/class/net/v4-rmnet0/queues/rx-0/rps_cpus 2
