--- a/rf-tools/Unified/ramdisk/ueventd.rc
+++ b/rf-tools/Unified/ramdisk/ueventd.rc
@@ -130,6 +130,6 @@ subsystem adf
 # Sensorhub IIO
 /dev/ssp_sensorhub        0660   system		system
 /dev/iio:device*          0660   system		system
-/sys/devices/platform/13980000.spi/spi_master/spi4/spi4.0/iio:device*    buffer/enable       0660    system    system
-/sys/devices/platform/13980000.spi/spi_master/spi4/spi4.0/iio:device*    buffer/length       0660    system    system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/enable       0660    system    system
+/sys/devices/13930000.spi/spi_master/spi2/spi2.0/iio:device*    buffer/length       0660    system    system
 /sys/bus/iio/devices/iio:device*    0664   system     radio
